# da.rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
examples/: lorenz63.rs
math_doc/: .gitignore  dars.tex
src/: ensemble.rs  gaussian.rs  lib.rs  model.rs  observation.rs  types.rs  weight.rs
tests/: ensemble.rs  gaussian.rs  observation.rs
