[package]
name = "dars"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description   = "Data Assimilation in Rust"
documentation = "https://docs.rs/da.rs"
repository    = "https://github.com/termoshtt/da.rs"
keywords      = ["data-assimilation", "bayes-inference", "dynamical-system"]
license       = "GPLv3"
readme        = "README.md"
categories    = ["algorithms", "science"]

[dependencies]
procedurals = "0.2.2"
rand = "0.3"
num-complex = "0.1"
ndarray = "0.10"
ndarray-rand = "0.6"
ndarray-linalg = "0.6"
ndarray-odeint = "0.7"
