[package]
name = "dars"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description   = "Data Assimilation in Rust"
documentation = "https://docs.rs/dars"
repository    = "https://github.com/termoshtt/dars"
keywords      = ["data-assimilation", "bayes-inference", "dynamical-system"]
license       = "MIT"
readme        = "README.md"
categories    = ["algorithms", "science"]

[dependencies]
procedurals = "0.2"
num-complex = "0.1"
ndarray = "0.10"
ndarray-linalg = "0.7"
